--- a/assets/style/all.css
+++ b/assets/style/all.css
@@ -1,12 +1,37 @@
 @charset "UTF-8";
+@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  /* Preferred icon size */
+  display: inline-block;
+  line-height: 28px;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+}
+
 body,
 html {
   width: 100%;
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  font-family: 微軟正黑體;
-  font-size: 16px;
+  font-family: 'cwTeXYen', sans-serif;
+  font-size: 18px;
   color: #3f5d45;
 }
 
@@ -30,6 +55,11 @@ li {
   margin: 0;
 }
 
+input {
+  font-family: 'cwTeXYen', sans-serif;
+  font-size: 18px;
+}
+
 a {
   text-decoration: none;
   color: #3f5d45;
@@ -42,6 +72,7 @@ li {
   margin: 0;
 }
 
+/*頂部選單*/
 header {
   font-size: 1rem;
 }
@@ -64,7 +95,6 @@ header nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-weight: bold;
 }
 
 header nav ul {
@@ -82,7 +112,7 @@ header nav ul {
 
 header nav ul li {
   margin: 0 30px;
-  padding: 0 10px;
+  padding: 5px 10px;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
@@ -97,6 +127,7 @@ header nav ul li img {
   height: 24px;
 }
 
+/*首頁大圖*/
 .slide {
   width: 940px;
   height: 496px;
@@ -104,8 +135,10 @@ header nav ul li img {
   background-image: url("../../img/slide.jpg");
   background-size: cover;
   background-position: center;
+  margin-bottom: 40px;
 }
 
+/*三主題*/
 .topic_area {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -113,9 +146,9 @@ header nav ul li img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-transform: translateY(-60px);
-          transform: translateY(-60px);
-  margin-bottom: 30px;
+  -webkit-transform: translateY(-60%);
+          transform: translateY(-60%);
+  margin-bottom: -80px;
 }
 
 .topic_area .topic {
@@ -182,6 +215,7 @@ header nav ul li img {
   background-image: url("../../img/topic_3.jpg");
 }
 
+/*介紹*/
 section {
   width: 100%;
   height: 420px;
@@ -225,10 +259,10 @@ section .reason p {
           writing-mode: vertical-rl;
   display: inline-block;
   font-size: 1rem;
-  line-height: 36px;
+  line-height: 28px;
   max-height: 300px;
   color: #8DA291;
-  margin: 0px 30px;
+  margin: 0px 15px;
 }
 
 section .reason img {
@@ -266,6 +300,7 @@ section .pic_2 {
   margin: 120px auto;
 }
 
+/*產品*/
 .products {
   width: 1024px;
   display: -webkit-box;
@@ -335,9 +370,9 @@ section .pic_2 {
 .products .item .addcart {
   cursor: pointer;
   background: #eaf0ed;
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding: 15px 90px;
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 10px 90px;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
@@ -347,7 +382,9 @@ section .pic_2 {
   background: #3f5d45;
 }
 
+/*底部*/
 footer {
+  margin-top: 40px;
   background: #eaf0ed;
 }
 
@@ -395,12 +432,18 @@ footer .email {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 footer .email .icon {
   height: 56px;
   line-height: 56px;
-  padding: 0 20px;
+  padding: 6px 20px;
   background: #fff;
 }
 
@@ -409,10 +452,12 @@ footer .email label {
   background: #FFE180;
   height: 56px;
   line-height: 56px;
-  padding: 0 20px;
+  padding: 6px 20px;
 }
 
 footer .email input {
+  color: #3f5d45;
+  font-size: 1.2rem;
   width: 300px;
   height: 56px;
   padding: 10px;
