--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,8 +1,35 @@
+@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
+
 $green: #3f5d45;
 $light_green: #eaf0ed;
 $yellow: #FFE180;
 $black: #000;
 $white: #fff;
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 28px;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 
 body,
 html {
@@ -10,8 +37,8 @@ html {
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  font-family: 微軟正黑體;
-  font-size: 16px;
+  font-family: 'cwTeXYen', sans-serif;
+  font-size: 18px;
   color: $green;
 }
 * {
@@ -31,6 +58,10 @@ li {
   padding: 0;
   margin: 0;
 }
+input{
+  font-family: 'cwTeXYen', sans-serif;
+  font-size: 18px;
+}
 a {
   text-decoration: none;
   color: $green;
@@ -41,7 +72,7 @@ li {
   padding: 0;
   margin: 0;
 }
-
+/*頂部選單*/
 header {
   font-size: 1rem;
   .logo {
@@ -56,14 +87,13 @@ header {
     margin: auto;
     display: flex;
     justify-content: space-between;
-    font-weight: bold;
     ul {
       display: flex;
       align-items: center;
       flex-direction: row;
       li {
         margin: 0 30px;
-        padding: 0 10px;
+        padding: 5px 10px;
         transition: all .3s;
         &:hover{
           box-shadow: 0 3px 0 $green;
@@ -76,6 +106,7 @@ header {
     }
   }
 }
+/*首頁大圖*/
 .slide {
   width: 940px;
   height: 496px;
@@ -83,12 +114,14 @@ header {
   background-image: url("../../img/slide.jpg");
   background-size: cover;
   background-position: center;
+  margin-bottom: 40px;
 }
+/*三主題*/
 .topic_area {
   display: flex;
   justify-content: center;
-  transform: translateY(-60px);
-  margin-bottom: 30px;
+  transform: translateY(-60%);
+  margin-bottom: -80px;
   .topic {
     width: 260px;
     height: 260px;
@@ -141,6 +174,7 @@ header {
     }
   }
 }
+/*介紹*/
 section{
   width: 100%;
   height: 420px;
@@ -166,10 +200,10 @@ section{
       writing-mode: vertical-rl;
       display: inline-block;
       font-size: 1rem;
-      line-height: 36px;
+      line-height: 28px;
       max-height: 300px;
       color:#8DA291;
-      margin: 0px 30px;
+      margin: 0px 15px;
     }
     img{
       position: absolute;
@@ -201,6 +235,7 @@ section{
   background-position: center ;
   margin: 120px auto;
 }
+/*產品*/
 .products{
   width: 1024px;
   display: flex;
@@ -247,9 +282,9 @@ section{
     .addcart{
       cursor: pointer;
       background: $light_green;
-      font-size: 1.5rem;
-      font-weight: bold;
-      padding: 15px 90px;
+      font-size: 1.2rem;
+      text-align: center;
+      padding: 10px 90px;
       transition: all .3s;
       &:hover{
         color: $white;
@@ -258,7 +293,9 @@ section{
     }
   }
 }
+/*底部*/
 footer{
+  margin-top: 40px;
   background: $light_green;
   .subscribe{
     background: $green;
@@ -286,10 +323,12 @@ footer{
   }
   .email{
     display: flex;
+    align-items: center;
+    justify-content: center;
     .icon{
       height: 56px;
       line-height: 56px;
-      padding: 0 20px;
+      padding: 6px 20px;
       background: #fff;
     }
     label{
@@ -297,9 +336,11 @@ footer{
       background: $yellow;
       height: 56px;
       line-height: 56px;
-      padding: 0 20px;
+      padding: 6px 20px;
     }
     input{
+      color: $green;
+      font-size: 1.2rem;
       width: 300px;
       height: 56px;
       padding: 10px;
