--- a/assets/style/all.css
+++ b/assets/style/all.css
@@ -55,7 +55,9 @@ li {
   margin: 0;
 }
 
-input {
+input, select {
+  outline: none;
+  border: none;
   font-family: 'cwTeXYen', sans-serif;
   font-size: 18px;
 }
