--- a/assets/style/cart.css
+++ b/assets/style/cart.css
@@ -1,6 +1,6 @@
 .cart {
   width: 940px;
-  margin: 60px auto;
+  margin: 20px auto 60px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
