--- a/assets/style/login.css
+++ b/assets/style/login.css
@@ -102,6 +102,22 @@
   width: 100%;
 }
 
+.contain .mobile_social {
+  display: none;
+  background: #eaf0ed;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contain .mobile_social img {
+  margin: 0 10px;
+  width: 25%;
+}
+
 .active {
   height: 380px;
   background: #3f5d45;
