--- a/scss/cart.scss
+++ b/scss/cart.scss
@@ -6,7 +6,7 @@ $white: #fff;
 
 .cart {
   width: 940px;
-  margin: 60px auto;
+  margin: 20px auto 60px auto;
   display: flex;
   align-items: flex-start;
 }
