--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -1,10 +1,4 @@
-$green: #3f5d45;
-$green2: #8DA291;
-$light_green: #eaf0ed;
-$yellow: #FFE180;
-$black: #000;
-$white: #fff;
-
+@import "all";
 
 .checkout{
   display: flex;
