--- a/scss/products.scss
+++ b/scss/products.scss
@@ -1,8 +1,5 @@
-$green: #3f5d45;
-$light_green: #eaf0ed;
-$yellow: #FFE180;
-$black: #000;
-$white: #fff;
+@import "all";
+
 /*產品*/
 .product_contain{
   width: 940px;
