--- a/scss/success.scss
+++ b/scss/success.scss
@@ -1,8 +1,4 @@
-$green: #3f5d45;
-$light_green: #eaf0ed;
-$yellow: #FFE180;
-$black: #000;
-$white: #fff;
+@import "all";
 
 .success{
   width: 940px;
